fixed some adaptive layout issues

--- a/style.css
+++ b/style.css
@@ -127,12 +127,21 @@ button:focus {
     border-bottom-right-radius: 5px;
 }
 
-@media (min-width: 1024px) {
-    .main_slides_portfolio_slide img:last-child {
-        padding-left: 55px;
+@media (min-width: 1024px) and (min-height:450px) {
+    .main_slides_portfolio_slide img {
+        width: 12vw;
+        height: 47vh;
+        margin: 0px 10px 10px 50px;
     }
     .main_slides_portfolio_slide img:first-child {
-        padding-right: 55px;
+        margin-right: 55px;
+        height: 40vh;
+        width: 25vw;
+    }
+    .main_slides_portfolio_slide img:last-child {
+        margin-left: 55px;
+        height: 44vh;
+        width: 25vw;
     }
 }
 
@@ -175,14 +184,15 @@ button:focus {
         flex-direction: column;
     }
     h1 {
-        font-size: 21px !important;
+        font-size: 1.2em !important;
     }
     h2 {
-        font-size: 16px !important;
+        font-size: 0.8em !important;
     }
     .main_slides_portfolio_slide img {
-        width: 35vw;
-        height: 30vh;
+        width: 33vw;
+        height: 24vh;
+        margin: 30px 0 10px 0;
     }
     .main_slides_portfolio_slide img:first-child {
         height: 14vh;
@@ -199,22 +209,20 @@ button:focus {
 
 @media (max-width: 450px) {
     h1 {
-        font-size: 15px !important;
+        font-size: 1em !important;
     }
     .main_slides_portfolio_slide {
         flex-direction: column;
     }
     button {
         padding: 12px;
+        font-size: 0.5em;
     }
 }
 
 @media (max-width: 450px) and (max-height: 500px) {
     .main_slides_portfolio_slide {
         flex-direction: column;
-    }
-    .fas fa-arrow-up {
-        font-size: 0.65em;
     }
     h1 {
         font-size: 15px !important;
